kasten/k10-immutable-location-profile/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno_data_protection_tests
policies:
- ../k10-immutable-location-profile.yaml
resources:
- immutable-location-profile.yaml
results:
- kind: Profile
  policy: k10-immutable-location-profile
  resources:
  - sample-location-profile-invalid
  result: fail
  rule: k10-immutable-location-profile
- kind: Profile
  policy: k10-immutable-location-profile
  resources:
  - sample-location-profile
  result: pass
  rule: k10-immutable-location-profile
